added the rest of calculator html

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,7 +31,31 @@
                         <button type="button" class="btn btn-outline-secondary" data-num="8">8</button>                   
                         <button type="button" class="btn btn-outline-secondary" data-num="9">9</button>
                         <button type="button" class="btn btn-outline-secondary" data-ops="plus">+</button>
-                    </div>
+                    </div><!-- /.col-6 -->
+                </div><!-- /.row -->
+                <div class="row">
+                    <div class="col-6">
+                        <button type="button" class="btn btn-outline-secondary" data-num="4">4</button>
+                        <button type="button" class="btn btn-outline-secondary" data-num="5">5</button>                   
+                        <button type="button" class="btn btn-outline-secondary" data-num="6">6</button>
+                        <button type="button" class="btn btn-outline-secondary" data-ops="minus">-</button>
+                    </div><!-- /.col-6 -->
+                </div><!-- /.row -->
+                <div class="row">
+                    <div class="col-6">
+                        <button type="button" class="btn btn-outline-secondary" data-num="1">1</button>
+                        <button type="button" class="btn btn-outline-secondary" data-num="2">2</button>                   
+                        <button type="button" class="btn btn-outline-secondary" data-num="3">3</button>
+                        <button type="button" class="btn btn-outline-secondary" data-ops="multiply">*</button>
+                    </div><!-- /.col-6 -->
+                </div><!-- /.row -->
+                <div class="row">
+                    <div class="col-6">
+                        <button type="button" class="btn btn-outline-secondary" data-num="0">0</button>
+                        <button type="button" class="btn btn-outline-secondary" data-ops="decimal">.</button>                   
+                        <button type="button" class="btn btn-outline-secondary" data-ops="equals">=</button>
+                        <button type="button" class="btn btn-outline-secondary" data-ops="divide">%</button>
+                    </div><!-- /.col-6 -->
                 </div><!-- /.row -->
             </div><!-- /.card -->
         </div><!-- /.container -->
