fixed html formatting and centered content

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -23,59 +23,47 @@
 
 <body>
     <div class="container">
-        <div class="card">
-            <div class="row align-items-center">
+        <!-- <div class="card"> -->
+            <div class="row justify-content-center">
 
                 <!-- display pannel -->
-                <div class="col-6">
+                <div class="col-4">
                     <button type="button" class="btn btn-outline-info" id="clear">C</button>
                     <input type="text">
-                </div><!-- /.col-6 -->
-            </div>
-            <!-- /.row -->
-            <div class="row align-items-center">
-                <div class="col-6">
+                </div><!-- /.col-4 -->
+            </div><!-- /.row -->
+            <div class="row justify-content-center">
+                <div class="col-4">
                     <button type="button" class="btn btn-outline-info" data-num="7">7</button>
                     <button type="button" class="btn btn-outline-info" data-num="8">8</button>
                     <button type="button" class="btn btn-outline-info" data-num="9">9</button>
                     <button type="button" class="btn btn-outline-info" data-ops="plus">+</button>
-                </div>
-                <!-- /.col-6 -->
-            </div>
-            <!-- /.row -->
-            <div class="row align-items-center">
-                <div class="col-6">
+                </div><!-- /.col-4 -->
+            </div> <!-- /.row -->
+            <div class="row justify-content-center">
+                <div class="col-4">
                     <button type="button" class="btn btn-outline-info" data-num="4">4</button>
                     <button type="button" class="btn btn-outline-info" data-num="5">5</button>
                     <button type="button" class="btn btn-outline-info" data-num="6">6</button>
                     <button type="button" class="btn btn-outline-info" data-ops="minus">-</button>
-                </div>
-                <!-- /.col-6 -->
-            </div>
-            <!-- /.row -->
-            <div class="row align-items-center">
-                <div class="col-6">
+                </div> <!-- /.col-4 -->
+            </div> <!-- /.row -->
+            <div class="row justify-content-center">
+                <div class="col-4">
                     <button type="button" class="btn btn-outline-info" data-num="1">1</button>
                     <button type="button" class="btn btn-outline-info" data-num="2">2</button>
                     <button type="button" class="btn btn-outline-info" data-num="3">3</button>
                     <button type="button" class="btn btn-outline-info" data-ops="multiply">*</button>
-                </div>
-                <!-- /.col-6 -->
-            </div>
-            <!-- /.row -->
-            <div class="row align-items-center">
-                <div class="col-6">
+                </div><!-- /.col-4 -->
+            </div> <!-- /.row -->
+            <div class="row justify-content-center">
+                <div class="col-4">
                     <button type="button" class="btn btn-outline-info" data-num="0">0</button>
                     <button type="button" class="btn btn-outline-info" data-ops="decimal">.</button>
                     <button type="button" class="btn btn-outline-info" data-ops="equals">=</button>
                     <button type="button" class="btn btn-outline-info" data-ops="divide">%</button>
-                </div>
-                <!-- /.col-6 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.card -->
-    </div>
-    <!-- /.container -->
+                </div><!-- /.col-4 -->
+        </div><!-- /.row -->
+    </div><!-- /.container -->
 </body>
 </html>
