--- a/public_html/index.html
+++ b/public_html/index.html
@@ -27,13 +27,13 @@
             <div class="row justify-content-center">
 
                 <!-- display pannel -->
-                <div class="col-4">
+                <div class="col-lg-4">
                     <button type="button" class="btn btn-outline-info" id="clear">C</button>
                     <input type="text">
                 </div><!-- /.col-4 -->
             </div><!-- /.row -->
             <div class="row justify-content-center">
-                <div class="col-4">
+                <div class="col-lg-4">
                     <button type="button" class="btn btn-outline-info" data-num="7">7</button>
                     <button type="button" class="btn btn-outline-info" data-num="8">8</button>
                     <button type="button" class="btn btn-outline-info" data-num="9">9</button>
@@ -41,7 +41,7 @@
                 </div><!-- /.col-4 -->
             </div> <!-- /.row -->
             <div class="row justify-content-center">
-                <div class="col-4">
+                <div class="col-lg-4">
                     <button type="button" class="btn btn-outline-info" data-num="4">4</button>
                     <button type="button" class="btn btn-outline-info" data-num="5">5</button>
                     <button type="button" class="btn btn-outline-info" data-num="6">6</button>
@@ -49,7 +49,7 @@
                 </div> <!-- /.col-4 -->
             </div> <!-- /.row -->
             <div class="row justify-content-center">
-                <div class="col-4">
+                <div class="col-lg-4">
                     <button type="button" class="btn btn-outline-info" data-num="1">1</button>
                     <button type="button" class="btn btn-outline-info" data-num="2">2</button>
                     <button type="button" class="btn btn-outline-info" data-num="3">3</button>
@@ -57,7 +57,7 @@
                 </div><!-- /.col-4 -->
             </div> <!-- /.row -->
             <div class="row justify-content-center">
-                <div class="col-4">
+                <div class="col-lg-4">
                     <button type="button" class="btn btn-outline-info" data-num="0">0</button>
                     <button type="button" class="btn btn-outline-info" data-ops="decimal">.</button>
                     <button type="button" class="btn btn-outline-info" data-ops="equals">=</button>
