--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,6 +17,8 @@
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
         crossorigin="anonymous"></script>
+    <!-- Custom JavaScript -->
+    <script src="js/script.js" type="text/javascript"></script>
 
     <title>Calculator</title>
 </head>
