--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,7 +31,7 @@
                 <!-- display pannel -->
                 <div class="col-lg-4">
                     <button type="button" class="btn btn-outline-info" id="clear">C</button>
-                    <input type="text">
+                    <div class="display">0</div>
                 </div><!-- /.col-4 -->
             </div><!-- /.row -->
             <div class="row justify-content-center">
