added id's and classes to some elements

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,39 +31,39 @@
                 <!-- display pannel -->
                 <div class="col-lg-4">
                     <button type="button" class="btn btn-outline-info" id="clear">C</button>
-                    <div class="display">0</div>
+                    <div class="display" id="display">0</div>
                 </div><!-- /.col-4 -->
             </div><!-- /.row -->
             <div class="row justify-content-center">
                 <div class="col-lg-4">
-                    <button type="button" class="btn btn-outline-info" data-num="7">7</button>
-                    <button type="button" class="btn btn-outline-info" data-num="8">8</button>
-                    <button type="button" class="btn btn-outline-info" data-num="9">9</button>
-                    <button type="button" class="btn btn-outline-info" data-ops="plus">+</button>
+                    <button type="button" class="btn btn-outline-info num" data-num="7">7</button>
+                    <button type="button" class="btn btn-outline-info num" data-num="8">8</button>
+                    <button type="button" class="btn btn-outline-info num" data-num="9">9</button>
+                    <button type="button" class="btn btn-outline-info ops" id="plus" data-ops="plus">+</button>
                 </div><!-- /.col-4 -->
             </div> <!-- /.row -->
             <div class="row justify-content-center">
                 <div class="col-lg-4">
-                    <button type="button" class="btn btn-outline-info" data-num="4">4</button>
-                    <button type="button" class="btn btn-outline-info" data-num="5">5</button>
-                    <button type="button" class="btn btn-outline-info" data-num="6">6</button>
-                    <button type="button" class="btn btn-outline-info" data-ops="minus">-</button>
+                    <button type="button" class="btn btn-outline-info num" data-num="4">4</button>
+                    <button type="button" class="btn btn-outline-info num" data-num="5">5</button>
+                    <button type="button" class="btn btn-outline-info num" data-num="6">6</button>
+                    <button type="button" class="btn btn-outline-info ops" id="minus" data-ops="minus">-</button>
                 </div> <!-- /.col-4 -->
             </div> <!-- /.row -->
             <div class="row justify-content-center">
                 <div class="col-lg-4">
-                    <button type="button" class="btn btn-outline-info" data-num="1">1</button>
-                    <button type="button" class="btn btn-outline-info" data-num="2">2</button>
-                    <button type="button" class="btn btn-outline-info" data-num="3">3</button>
-                    <button type="button" class="btn btn-outline-info" data-ops="multiply">*</button>
+                    <button type="button" class="btn btn-outline-info num" data-num="1">1</button>
+                    <button type="button" class="btn btn-outline-info num" data-num="2">2</button>
+                    <button type="button" class="btn btn-outline-info num" data-num="3">3</button>
+                    <button type="button" class="btn btn-outline-info ops" id="multiply" data-ops="multiply">*</button>
                 </div><!-- /.col-4 -->
             </div> <!-- /.row -->
             <div class="row justify-content-center">
                 <div class="col-lg-4">
-                    <button type="button" class="btn btn-outline-info" data-num="0">0</button>
-                    <button type="button" class="btn btn-outline-info" data-ops="decimal">.</button>
-                    <button type="button" class="btn btn-outline-info" data-ops="equals">=</button>
-                    <button type="button" class="btn btn-outline-info" data-ops="divide">%</button>
+                    <button type="button" class="btn btn-outline-info num" data-num="0">0</button>
+                    <button type="button" class="btn btn-outline-info ops" id="decimal" data-ops="decimal">.</button>
+                    <button type="button" class="btn btn-outline-info ops" id="equals" data-ops="equals">=</button>
+                    <button type="button" class="btn btn-outline-info ops" id="divide" data-ops="divide">%</button>
                 </div><!-- /.col-4 -->
         </div><!-- /.row -->
     </div><!-- /.container -->
