added calculations and started click events

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -62,8 +62,8 @@
                 <div class="col-lg-4">
                     <button type="button" class="btn btn-outline-info num" data-num="0">0</button>
                     <button type="button" class="btn btn-outline-info ops" id="decimal" data-ops="decimal">.</button>
-                    <button type="button" class="btn btn-outline-info ops" id="equals" data-ops="equals">=</button>
-                    <button type="button" class="btn btn-outline-info ops" id="divide" data-ops="divide">%</button>
+                    <button type="button" class="btn btn-outline-info ops" id="equals" data-result="">=</button>
+                    <button type="button" class="btn btn-outline-info ops" id="modulus" data-ops="modulus">%</button>
                 </div><!-- /.col-4 -->
         </div><!-- /.row -->
     </div><!-- /.container -->
