--- a/public_html/index.html
+++ b/public_html/index.html
@@ -61,7 +61,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-4">
                     <button type="button" class="btn btn-outline-info num" data-num="0">0</button>
-                    <button type="button" class="btn btn-outline-info ops" id="decimal" data-ops="decimal">.</button>
+                    <button type="button" class="btn btn-outline-info num" id="decimal" data-num=".">.</button>
                     <button type="button" class="btn btn-outline-info ops" id="equals" data-result="">=</button>
                     <button type="button" class="btn btn-outline-info ops" id="modulus" data-ops="modulus">%</button>
                 </div><!-- /.col-4 -->
